--- a/_posts/2021-06-16-minio.md
+++ b/_posts/2021-06-16-minio.md
@@ -31,7 +31,7 @@ date: 2021-06-16 23:50:00
 
 공식 사이트에서는 다음과 같이 미니오를 설명하고 있습니다.  
 미니오는 아마존 S3 호환 표준입니다.
-아마존 S3는 전세계 오브젝트 스토리지 **사실상** 표준이고, 미니오는 처음으로 API 도입한 것들 중 하나이고
+**아마존 S3**는 전세계 오브젝트 스토리지 **사실상** 표준이고, 미니오는 처음으로 API 도입한 것들 중 하나이고
 처음으로 S3 select 지원을 했습니다.
 마이크로소프트 아주르를 포함한 750개 이상의 조직에서 미니오 S3 게이트웨이를 사용하며 나머지 산업체를 합한 것 이상으로 큽니다.
 
@@ -121,12 +121,12 @@ spec:
 해당 노드에 마운트된 폴더를 볼까요?
 
 ```shell
-$ cd mnt/minio
-/mnt/minio$ ls
-minio
+$ cd mnt/minio/minio
 /mnt/minio/minio$ ls
 mlpipeline  test
 ```
+
+![Alt](https://raw.githubusercontent.com/JWHer/jwher.github.io/master/_posts/images/minio-bucket.png "minio bucket")
 
 놀랍게도 bucket과 object가 파일시스템으로 저장되고 있음을 확인했습니다.
 이 부분에서 저는 미니오가 S3 호환 인터페이스이지 S3처럼 분산저장소는 아니라는 생각이 들었습니다.
@@ -138,7 +138,7 @@ mlpipeline  test
 ## Tips
 
 이번 글에서 minIO를 알아봤는데요,
-활용하는 방법에 대해서 [다음 글]() 에서 다루니 궁금하신 분은 더 읽어보시는 것도 좋을 것 같습니다.
+활용하는 방법에 대해서 [다음 글](https://jwher.github.io/2021-06-21-kubeflow-visualization-2/) 에서 다루니 궁금하신 분은 더 읽어보시는 것도 좋을 것 같습니다.
 
 ### Reference  
 [[공식]min.io](https://min.io)  
