redirect from url 추가

--- a/_posts/2021-06-16-minio.md
+++ b/_posts/2021-06-16-minio.md
@@ -2,6 +2,8 @@
 layout: post
 
 title: "minIO 오브젝트 스토리지"
+redirect_from:
+  - /2021-06-16-minio/
 thumbnail-img: /assets/img/minio.svg
 categories:
 - tech
