--- a/_posts/2021-06-02-nuclio.md
+++ b/_posts/2021-06-02-nuclio.md
@@ -2,6 +2,8 @@
 layout: post
 
 title: "Nuclio 개념과 아키텍처"
+redirect_from:
+  - /2021-06-02-nuclio/
 thumbnail-img: /assets/img/nuclio-superman.png
 categories:
 - tech
