링크 오류 수정

--- a/_posts/2021-08-23-cncf.md
+++ b/_posts/2021-08-23-cncf.md
@@ -65,8 +65,7 @@ trends.embed.renderExploreWidget("TIMESERIES", {"comparisonItem":[{"keyword":"ub
 > &nbsp;
 > Cloud Native Computing Foundation은 벤더 중립적인 오픈 소스 프로젝트 생태계를 육성하고 유지함으로써 해당 패러다임 채택을 촉진한다. 우리 재단은 최신 기술 수준의 패턴을 대중화하여 이런 혁신을 누구나 접근 가능하도록 한다.
 
-[[깃헙]클라우드 네이티브 정의](https://github.com/cncf/toc/blob/main/DEFINITION.md#%ED%95%9C%EA%B5%AD%EC%96%B4)  
-<br/>  
+[[깃헙]클라우드 네이티브 정의](https://github.com/cncf/toc/blob/main/DEFINITION.md#%ED%95%9C%EA%B5%AD%EC%96%B4)
 
 요악하면 크게 4가지 요소를 들 수 있습니다.
 * MicroService Architecture (MSA)
@@ -108,7 +107,7 @@ trends.embed.renderExploreWidget("TIMESERIES", {"comparisonItem":[{"keyword":"ub
 </div>
 <br/>
 
-<div align="center">
+<div markdown="1" align="center">
 <img src="/assets/img/cncf/serverless.png" style="max-height: 40vh;"/><br/>
 
 [서버리스](https://landscape.cncf.io/serverless)
