--- a/_posts/2021-08-12-dex.md
+++ b/_posts/2021-08-12-dex.md
@@ -5,8 +5,8 @@ title: "Dex: OpenID 커넥터"
 thumbnail-img: /assets/logos/dex.svg
 categories:
 - tech
-- kubeflow
 - kubernetes
+- istio
 excerpt: |
   자원에 OpenID 인증을 제공하는 방법
 date: 2021-08-12 23:50:00 
