노마드 링크 추가

--- a/_posts/2021-08-20-istio.md
+++ b/_posts/2021-08-20-istio.md
@@ -95,7 +95,7 @@ annotations:
 
 ## Tips
 
-쿠버네티스, 노마드, 콘솔에서 사용가능 합니다.
+[쿠버네티스](https://jwher.github.io/welcome-to-kubernetes), [노마드](https://www.nomadproject.io/), 콘솔(?)에서 사용가능 합니다.
 여기에서는 쿠버네티스로 가정하고 설명합니다.
 
 [Envoy proxy](https://jwher.github.io/envoy)
