스펠링 수정

--- a/_posts/2021-08-20-istio.md
+++ b/_posts/2021-08-20-istio.md
@@ -2,7 +2,7 @@
 layout: post
 
 title: "Istio: 서비스 메시"  
-thumbnail-img: /assets/logos/Isito.svg
+thumbnail-img: /assets/logos/Istio.svg
 categories:
 - tech
 - kubernetes
@@ -21,7 +21,7 @@ comments: true
 <!-- more -->
 
 <p align="center">
-<img src="/assets/logos/Isito.svg" style="max-height: 40vh;"/>
+<img src="/assets/logos/Istio.svg" style="max-height: 40vh;"/>
 </p>
 
 *Istio 서비스 메시*  
