--- a/_posts/2021-08-12-dex.md
+++ b/_posts/2021-08-12-dex.md
@@ -95,6 +95,7 @@ OAuth2.0 권한 서버인 **OIDC 제공자(OP, OIDC Provider)** 가
   
 [[삼성]OIDC](https://www.samsungsds.com/kr/insights/oidc.html)  
 [RFC6750(OAuth 2.0 Authorization Framework)](https://www.ietf.org/rfc/rfc6750.txt)  
+[[공식]OIDC Implementer's Guide](https://openid.net/specs/openid-connect-basic-1_0.html#CodeFlow)  
 
 > 소셜 로그인이 이렇게 복잡했군요 😅
 
