--- a/_posts/2021-08-23-cncf.md
+++ b/_posts/2021-08-23-cncf.md
@@ -33,6 +33,8 @@ comments: true
 
 ## CNCF
 
+### 클라우드 네이티브
+
 클라우드(Cloud)는 많이 들어보셨을 것입니다.
 **클라우드 네이티브** 애플리케이션은 프라이빗, 퍼블릭 및 하이브리드 클라우드 환경에서 **지속적인 개발**과
 **자동화된 관리** 환경을 제공하기 위해 설계된 앱을 말합니다.
@@ -40,41 +42,46 @@ comments: true
 
 Cloud Native Computing Foundation, CNCF는 비영리 리눅스 재단의 일부로 2015년에 설립되었습니다.
 CNCF의 목적은 **클라우드 네이티브** 컴퓨팅을 **유비쿼터스**로 만드는 것입니다.
-(The Foundation’s mission is to make cloud native computing ubiquitous.)
+(The Foundation’s mission is to make cloud native computing ubiquitous.)  
+
 유비쿼터스는 현재 대한민국에서 거의 쓰이지 않는 말이여서 부연설명을 하자면,
 '언제 어디서든 어떤 기기를 통해 컴퓨팅할 수 있는 것'을 의미합니다.
 즉, 클라우드와 컨테이너 기술 문제를 오픈소스로 해결하기 위해 설립되었습니다.
 
-<!--
 <script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/2674_RC03/embed_loader.js"></script>
 <script type="text/javascript">
 trends.embed.renderExploreWidget("TIMESERIES", {"comparisonItem":[{"keyword":"ubiquitous","geo":"KR","time":"2004-01-01 2021-08-23"},{"keyword":"IOT","geo":"KR","time":"2004-01-01 2021-08-23"}],"category":0,"property":""}, {"exploreQuery":"date=all&geo=KR&q=ubiquitous,IOT","guestPath":"https://trends.google.co.kr:443/trends/embed/"});
 </script>
--->
 
 *유비쿼터스와 IOT*
+<br/>
 
-구글은 첫 프로젝트로 쿠버네티스를 기부했고, 2018년 CNCF 커뮤니티에 쿠버네티스 제어권과 900만 달러를 제공합니다.
-2019년 조사는 쿠버네티스 사용자 78%가 프로덕션에 사용하는 것으로 집계되었습니다.  
-[[공식]New Cloud Native Computing Foundation](https://www.cncf.io/announcements/2015/06/21/new-cloud-native-computing-foundation-to-drive-alignment-among-container-technologies/)  
-[[공식]CNCF receives $9 million credit from google](https://www.cncf.io/announcements/2018/08/29/cncf-receives-9-million-cloud-credit-grant-from-google/)  
-[[공식]Cloud native adoption becomes mainstream](https://www.cncf.io/blog/2020/03/04/2019-cncf-survey-results-are-here-deployments-are-growing-in-size-and-speed-as-cloud-native-adoption-becomes-mainstream/)
+### 클라우드 네이티브 기술
 
-클라우드 네이티브 컴퓨팅 재단은 **클라우드 네이티브** 기술을 다음과 같이 정의합니다.
-> 클라우드 네이티브 기술은 조직이 퍼블릭, 프라이빗, 그리고 하이브리드 클라우드와 같은 현대적이고 동적인 환경에서 확장 가능한 애플리케이션을 개발하고 실행할 수 있게 해준다. 컨테이너, 서비스 메쉬, 마이크로서비스, 불변(Immutable) 인프라, 그리고 선언형(Declarative) API가 이러한 접근 방식의 예시들이다.
->
-> 이 기술은 회복성, 관리 편의성, 가시성을 갖춘 느슨하게 결합된 시스템을 가능하게 한다. 견고한 자동화 기능을 함께 사용하면, 엔지니어는 영향이 큰 변경을 최소한의 노력으로 자주, 예측 가능하게 수행할 수 있다.
-> 
+클라우드 네이티브 컴퓨팅 재단은 **클라우드 네이티브 기술**을 다음과 같이 정의합니다.
+> 클라우드 네이티브 기술은 조직이 퍼블릭, 프라이빗, 그리고 하이브리드 클라우드와 같은 현대적이고 동적인 환경에서 확장 가능한 애플리케이션을 개발하고 실행할 수 있게 해준다. 컨테이너, 서비스 메쉬, 마이크로서비스, 불변(Immutable) 인프라, 그리고 선언형(Declarative) API가 이러한 접근 방식의 예시들이다.  
+> &nbsp;
+> 이 기술은 회복성, 관리 편의성, 가시성을 갖춘 느슨하게 결합된 시스템을 가능하게 한다. 견고한 자동화 기능을 함께 사용하면, 엔지니어는 영향이 큰 변경을 최소한의 노력으로 자주, 예측 가능하게 수행할 수 있다.  
+> &nbsp;
 > Cloud Native Computing Foundation은 벤더 중립적인 오픈 소스 프로젝트 생태계를 육성하고 유지함으로써 해당 패러다임 채택을 촉진한다. 우리 재단은 최신 기술 수준의 패턴을 대중화하여 이런 혁신을 누구나 접근 가능하도록 한다.
->
+
 [[깃헙]클라우드 네이티브 정의](https://github.com/cncf/toc/blob/main/DEFINITION.md#%ED%95%9C%EA%B5%AD%EC%96%B4)  
 <br/>  
 
-**클라우드 네이티브**를 요악하면 크게 4가지 요소를 들 수 있습니다.
+요악하면 크게 4가지 요소를 들 수 있습니다.
 * MicroService Architecture (MSA)
 * DevOps
 * CI/CD
 * Container
+<br/>
+
+### CNCF 역사
+
+구글은 첫 프로젝트로 쿠버네티스를 기부했고, 2018년 CNCF 커뮤니티에 쿠버네티스 제어권과 900만 달러를 제공했습니다.
+2019년 조사는 쿠버네티스 사용자 78%가 프로덕션에 사용해 클라우드 네이티브 주류가 됬음을 보여줍니다.  
+[[공식]New Cloud Native Computing Foundation](https://www.cncf.io/announcements/2015/06/21/new-cloud-native-computing-foundation-to-drive-alignment-among-container-technologies/)  
+[[공식]CNCF receives $9 million credit from google](https://www.cncf.io/announcements/2018/08/29/cncf-receives-9-million-cloud-credit-grant-from-google/)  
+[[공식]Cloud native adoption becomes mainstream](https://www.cncf.io/blog/2020/03/04/2019-cncf-survey-results-are-here-deployments-are-growing-in-size-and-speed-as-cloud-native-adoption-becomes-mainstream/)
 <br/>
 
 ## 창립멤버
@@ -94,20 +101,18 @@ trends.embed.renderExploreWidget("TIMESERIES", {"comparisonItem":[{"keyword":"ub
   
 ## 랜드스케이프
 
-<p align="center">
+<div markdown="1" align="center">
 <img src="/assets/img/cncf/landscape.png" style="max-height: 40vh;"/><br/>
-랜드스케이프
-</p>
 
-[[공식]CNCF Landscape](https://landscape.cncf.io/)
+[랜드스케이프](https://landscape.cncf.io/)
+</div>
 <br/>
 
-<p align="center">
+<div align="center">
 <img src="/assets/img/cncf/serverless.png" style="max-height: 40vh;"/><br/>
-서버리스
-</p>
-
-[[공식]CNCF Serverless](https://landscape.cncf.io/serverless)
+  
+[서버리스](https://landscape.cncf.io/serverless)
+</div>
 <br/>
 
 정말 많은 오픈소스가 개발되고 있습니다.
